# nockapp

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  rust-toolchain.toml  rustfmt.toml  trace.json
.data.jams/: 1.jam
.github/workflows/: build.yml
apps/choo/: Cargo.toml  README.md  main.rs
apps/choo/bootstrap/: choo.jam  choo2.jam  choo3.jam  choo4.jam  choo5.jam  kernel.hoon  kernel2.hoon
apps/choo/hoon/lib/: kernel.hoon
apps/choo/src/: lib.rs  main.rs
apps/choo/tests/: build.rs
apps/hoon-deps/lib/: wrapper.hoon
apps/http-app/: Cargo.toml  main.rs
apps/http-app/bootstrap/: http.jam  kernel.hoon
apps/http-app/hoon/lib/: wrapper.hoon
apps/test-app/: Cargo.toml  main.rs
apps/test-app/bootstrap/: kernel.hoon  test-ker.jam
choo/: Cargo.toml  README.md  main.rs  out.jam
choo/bootstrap/: choo.jam  hoon-139.hoon
choo/hoon/: builder.hoon  kernel.hoon
choo/hoon/lib/: builder.hoon  kernel.hoon  wrapper.hoon
crown/: Cargo.toml
crown/src/: lib.rs  observability.rs
crown/src/actor/: mod.rs
crown/src/drivers/: exit.rs  file.rs  http.rs  markdown.rs  mod.rs  npc.rs  one_punch.rs  timer.rs
crown/src/kernel/: boot.rs  checkpoint.rs  form.rs  input.rs  mod.rs
crown/src/nockapp/: driver.rs  error.rs  http_driver.rs  mod.rs  nockapp.rs  test.rs  wire.rs
crown/src/nockapp/actors/: mod.rs  save.rs
crown/src/noun/: extensions.rs  mod.rs  ops.rs  slab.rs
crown/src/utils/: bytes.rs  error.rs  mod.rs  scry.rs  slogger.rs
crown/test-jams/: cue-test.jam  test-ker.jam
crown/tests/: integration.rs  test-ker.hoon  test-ker.jam  test.hoon  tidy.rs
http-app/: Cargo.toml  http.jam  main.rs
http-app/bootstrap/: http.jam  kernel.jam
http-app/hoon/lib/: builder.hoon  http-builder.hoon  http-kernel.hoon  kernel.hoon  wrapper.hoon
http-app/src/: main.rs
repl/: Cargo.toml  main.rs
repl/bootstrap/: choo.jam
repl/hoon/lib/: kernel.hoon  wrapper.hoon
synth/: Cargo.toml  main.rs  synth.jam
synth/hoon/lib/: hoon-139.hoon  kernel.hoon
test-app/: Cargo.toml  main.rs  test-ker.jam
