[workspace]
members = ["crown", "apps/choo", "apps/http-app", "apps/test-app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sword = { git = "https://github.com/zorp-corp/sword.git", rev = "6498b408d290f95c145ccdcda5ab5e8748ab87cb" }
sword_macros = { git = "https://github.com/zorp-corp/sword.git", rev = "6498b408d290f95c145ccdcda5ab5e8748ab87cb" }
assert_no_alloc = { git = "https://github.com/zorp-corp/sword.git", rev = "6498b408d290f95c145ccdcda5ab5e8748ab87cb" }

# Uncomment for local dev of sword and comment out above
# assert_no_alloc.path = "../sword/rust/assert_no_alloc"
# sword.path = "../sword/rust/sword"
# sword_macros.path = "../sword/rust/sword_macros"

# External dependencies
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7.5"
bincode = "2.0.0-rc.3"
blake3 = { version = "1.5.1", features = ["serde"] }
byteorder = "1.5.0"
bytes = "1.5.0"
clap = "4.4.4"
either = "1.9.0"
getrandom = "0.2.11"
rand = "0.8.5"
samply = "0.11.0"
serde = "1.0.195"
tempfile = "3.3"
tracing-test = "0.2.5"
thiserror = "1.0"
tokio = { version = "1.32", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "io-util",
    "fs",
    "signal",
] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "ansi",
    "env-filter",
    "registry",
] }
yaque = "0.6.6"
bitvec = "1.0.1"
futures = "0.3.30"
intmap = "2.0.0"
termimad = "0.31.0"

[profile.dev]
# opt-level = 3

[profile.dev.package."*"]
# opt-level = 3
