[workspace]
members = ["crown", "apps/choo", "apps/http-app", "apps/test-app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sword = { git = "https://github.com/zorp-corp/sword.git", rev = "bcb2e7fba0e24d45d4887fae77389d7c5e86b507" }
sword_macros = { git = "https://github.com/zorp-corp/sword.git", rev = "bcb2e7fba0e24d45d4887fae77389d7c5e86b507" }
assert_no_alloc = { git = "https://github.com/zorp-corp/sword.git", rev = "bcb2e7fba0e24d45d4887fae77389d7c5e86b507" }

# Uncomment for local dev of sword and comment out above
# assert_no_alloc.path = "../sword/rust/assert_no_alloc"
# sword.path = "../sword/rust/sword"
# sword_macros.path = "../sword/rust/sword_macros"

# External dependencies
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8.1"
bincode = "2.0.0-rc.3"
bitvec = "1.0.1"
blake3 = { version = "1.5.1", features = ["serde"] }
byteorder = "1.5.0"
bytes = "1.5.0"
clap = "4.4.4"
console-subscriber = "0.4.1"
either = "1.9.0"
futures = "0.3.31"
getrandom = "0.3.1"
intmap = "3.1.0"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
opentelemetry = { version = "0.27.1", features = [
    "trace",
    "logs",
    "metrics",
    "internal-logs",
] }
opentelemetry-otlp = { version = "0.27.0", features = [
    "tonic",
    "http-proto",
    "reqwest-client",
] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
rand = "0.8.5"
serde = "1.0.195"
tempfile = "3.3"
termimad = "0.31.0"
tracing = "0.1.40"
tracing-opentelemetry = { version = "0.28.0", features = ["metrics"] }
tracing-subscriber = { version = "0.3.18", features = [
    "ansi",
    "env-filter",
    "registry",
] }
tracing-test = "0.2.5"
thiserror = "1.0"
tokio = { version = "1.32", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "io-util",
    "fs",
    "signal",
] }
tokio-util = "0.7.12"
yaque = "0.6.6"
tonic = "0.12.3"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 1
