[package]
name = "crown"
version.workspace = true
edition.workspace = true

[features]
trait-alias = []

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "color", "env"] }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sword = { workspace = true }
sword_macros = { workspace = true }
assert_no_alloc = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
byteorder = { workspace = true } 
bytes = { workspace = true, features = ["serde"] }
either = { workspace = true }
getrandom = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
yaque = { workspace = true }

[lib]
name = "crown"
path = "src/lib.rs"
