[package]
name = "crown"
version.workspace = true
edition.workspace = true

[features]
trait-alias = []
validate-nouns = []

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bitvec = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "color", "env"] }
sword = { workspace = true }
sword_macros = { workspace = true }
assert_no_alloc = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
byteorder = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
either = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
intmap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
termimad = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "signal"]}
tokio-util = { workspace = true }
yaque = { workspace = true }

[lib]
name = "crown"
path = "src/lib.rs"
